--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.16",
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
+    "lucide-react": "^0.534.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
