--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://crypto-platform-backend-silk.vercel.app/
+VITE_API_BASE_URL=https://crypto-platform-backend-silk.vercel.app
